Fix menu not showing some days after creating it Fix menu interface z-indexes

--- a/client/src/features/Menu/styles/MenuEl.module.css
+++ b/client/src/features/Menu/styles/MenuEl.module.css
@@ -28,6 +28,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   max-width: 70%;
+  user-select: none;
 }
 
 .edit {
