--- a/client/src/features/Menu/styles/NewMenu.module.css
+++ b/client/src/features/Menu/styles/NewMenu.module.css
@@ -6,7 +6,7 @@
   left: 0;
   background-color: var(--black-alpha);
   backdrop-filter: blur(5px);
-  z-index: 2;
+  z-index: 9;
 }
 
 .wrapper {
